Started adding collapse panels to projects page. Also updated root path so it redirects to about page.

--- a/nick-site/src/app/projects/projects.component.html
+++ b/nick-site/src/app/projects/projects.component.html
@@ -1,5 +1,47 @@
 <h1 class="text-center">Projects</h1>
 <hr/>
 
-<p>Here will be a list of all the projects I've worked on that are relevant.</p>
-<p>But first, I need to make some of them. Oops.</p>
+<p>Click on any heading below to expand.</p>
+
+<div class="accordion" id="accordionProjects">
+
+    <div class="card">
+        <div class="card-header" id="headingGames">
+            <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseGames" aria-expanded="true" aria-controls="collapseGames">
+                <h2 class="projectsHeading">Game Projects</h2>
+            </button>
+        </div>
+        <div id="collapseGames" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingGames">
+            <div class="card-body">
+                Games go here.
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header" id="headingCode">
+            <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseCode" aria-expanded="true" aria-controls="collapseCode">
+                <h2 class="projectsHeading">Code Projects</h2>
+            </button>
+        </div>
+        <div id="collapseCode" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingCode">
+            <div class="card-body">
+                Misc. code projects go here.
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header" id="headingOther">
+            <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseOther" aria-expanded="true" aria-controls="collapseOther">
+                <h2 class="projectsHeading">Other Projects</h2>
+            </button>
+        </div>
+        <div id="collapseOther" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingOther">
+            <div class="card-body">
+                Non-code projects go here.
+            </div>
+        </div>
+    </div>
+
+</div>
