Make entire site more readable
Realized that the font was a bit too small, so made it larger and in
doing so realized that my picture on the about page had to go. But
because my social accounts are always 1 click away it wasn't a big
loss.

--- a/nick-site/src/app/projects/projects.component.html
+++ b/nick-site/src/app/projects/projects.component.html
@@ -13,7 +13,7 @@
         </div>
         <div id="collapseGames" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingGames">
             <div class="card-body">
-                Games go here.
+                <p>Games go here.</p>
             </div>
         </div>
     </div>
@@ -26,7 +26,7 @@
         </div>
         <div id="collapseCode" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingCode">
             <div class="card-body">
-                Misc. code projects go here.
+                <p>Misc. code projects go here.</p>
             </div>
         </div>
     </div>
@@ -39,9 +39,8 @@
         </div>
         <div id="collapseOther" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingOther">
             <div class="card-body">
-                Non-code projects go here.
+                <p>Non-code projects go here.</p>
             </div>
         </div>
     </div>
-
 </div>
