--- a/nick-site/src/app/about/about.component.html
+++ b/nick-site/src/app/about/about.component.html
@@ -2,14 +2,7 @@
 <hr/>
 
 <div class="row">
-  <div class="col-md-4">
-    <figure class="figure">
-      <!--<img src="https://ca.slack-edge.com/T02UN5XCZ-U02UN5XD3-557f30276535-512" class="about-pic">-->
-      <img src="https://ca.slack-edge.com/T02UN5XCZ-U02UN5XD3-557f30276535-512" class="figure-img img-fluid rounded"/>
-      <figcaption class="figure-caption text-left text-small">This is me in a suit (so you know I'm a professional)</figcaption>
-    </figure>
-  </div>
-  <div class="col-md-8">
+  <div class="col">
     <p>I'm a software developer and project manager.</p>
     <p>I make games some of the time, and websites some of the time. In fact, I made this website.</p>
     <p>You can see <em>all</em> of my projects <a routerLink="/projects">here</a>.</p>
