--- a/nick-site/src/app/now/now.component.html
+++ b/nick-site/src/app/now/now.component.html
@@ -2,7 +2,7 @@
 <hr/>
 
 <p>
-  This is my <a href="https://nownownow.com/about">now page</a>.
+  This is my <a href="https://nownownow.com/about" target="_blank">now page</a>.
 </p>
 
 <p>I'm currently living in Philadelphia, PA.</p>
