--- a/nick-site/src/app/projects/projects.component.html
+++ b/nick-site/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <h1 class="text-center">Projects</h1>
 <hr/>
 
-<p>Click on any heading below to expand.</p>
+<p class="text-center">Click on any heading below to expand.</p>
 
 <div class="accordion" id="accordionProjects">
 
@@ -13,7 +13,7 @@
         </div>
         <div id="collapseGames" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingGames">
             <div class="card-body">
-                <p>Games go here.</p>
+                <app-projects-display [projects]=projects [type]="'game'"></app-projects-display>
             </div>
         </div>
     </div>
@@ -26,7 +26,7 @@
         </div>
         <div id="collapseCode" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingCode">
             <div class="card-body">
-                <p>Misc. code projects go here.</p>
+                <app-projects-display [projects]=projects [type]="'code'"></app-projects-display>
             </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
         </div>
         <div id="collapseOther" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingOther">
             <div class="card-body">
-                <p>Non-code projects go here.</p>
+                <app-projects-display [projects]=projects [type]="'other'"></app-projects-display>
             </div>
         </div>
     </div>
