--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
     <p>I'm a software developer and project manager.</p>
     <p>I make games some of the time, and websites some of the time. In fact, I made this website.</p>
     <p>You can see <em>all</em> of my projects <a routerLink="/projects">here</a>.</p>
-    <p>My brother Anthony and I have our own video game company. It's called Synersteel Studio, and you can visit it <a href="https://synersteel.com" target="_blank">here</a>.
+    <p>My brother Anthony and I have our own video game company. It's called Synersteel Studio, and you can visit it <a href="http://synersteel.com" target="_blank">here</a>.
     We've commercially released 4 games to date.</p>
     <p>I really enjoy:</p>
     <ul>
