Make social icons responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,13 @@
   <router-outlet></router-outlet>
   <hr/>
   <div class="row justify-content-center">
-    <div class="col-1">
+    <div class="col text-right">
         <a href="mailto:njvaccaro0@gmail.com" class="fas fa-envelope-square fa-clickable fa-3x"></a>
     </div>
-    <div class="col-1">
+    <div class="col text-center">
         <a href="https://twitter.com/NickJVaccaro" class="fab fa-twitter-square fa-clickable fa-3x" target="_blank"></a>
     </div>
-    <div class="col-1">
+    <div class="col">
         <a href="https://www.linkedin.com/in/nickjvaccaro/" class="fab fa-linkedin fa-clickable fa-3x" target="_blank"></a>
     </div>
   </div>
