--- a/src/app/projects-display/projects-display.component.html
+++ b/src/app/projects-display/projects-display.component.html
@@ -2,12 +2,12 @@
     <div *ngFor="let project of projects; let i = index">
       <hr *ngIf="i > 0"/>
       <div class="row">
-        <div class="col-4">
-            <figure class="figure">
-                <img src="{{project.img}}" class="figure-img img-fluid rounded">
+        <div class="col-lg-4 col-md-12">
+            <figure class="text-center">
+                <img src="{{project.img}}" class="figure-img img-fluid rounded border">
             </figure>
         </div>
-        <div class="col">
+        <div class="col-md">
             <a href="{{project.link}}" target="_blank"><h3>{{project.title}}</h3></a>
             <p><strong>Summary:</strong><br/>{{project.summary}}</p>
             <p><strong>Tech Used:</strong><br/>{{project.tech}}</p>
