--- a/src/app/now/now.component.html
+++ b/src/app/now/now.component.html
@@ -9,9 +9,9 @@
 
 <p>Here's what I'm focused on these days:</p>
 <ul>
-  <li>Spell Venture</li>
-  <li>Personal Website</li>
-  <li>Playing Video Games</li>
+  <li><a href="https://valleyofshadowgame.com">Valley of Shadow</a> development</li>
+  <li>Playing as many tabletop RPGs as possible</li>
+  <li>Playing Games (Apex Legends, Divinity: Original Sin)</li>
 </ul>
 
-<p class="small text-right">Last updated 9/27/18</p>
+<p class="small text-right">Last updated 2/25/19</p>
