--- a/src/app/projects-display/projects-display.component.html
+++ b/src/app/projects-display/projects-display.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div *ngFor="let project of projects; let i = index">
       <hr *ngIf="i > 0"/>
-      <div class="row">
-        <div class="col-lg-4 col-md-12">
-            <figure class="text-center">
+      <div class="row align-items-center project-row">
+        <div class="col-lg-3 col-md-12">
+            <figure class="text-center project-img">
                 <img src="{{project.img}}" class="figure-img img-fluid rounded border">
             </figure>
         </div>
