--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,17 +1,17 @@
 <h1 class="text-center">Projects</h1>
 <hr/>
 
-<p class="text-center">Click on any heading below to expand.</p>
+<p class="text-center">Click on any heading below to expand/collapse.</p>
 
 <div class="accordion" id="accordionProjects">
 
     <div class="card">
         <div class="card-header" id="headingGames">
             <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseGames" aria-expanded="true" aria-controls="collapseGames">
-                <h2 class="projectsHeading">Game Projects</h2>
+                <h2 class="projectsHeading">Game Development</h2>
             </button>
         </div>
-        <div id="collapseGames" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingGames">
+        <div id="collapseGames" class="collapse show" data-parent="#accordionProjects" aria-labelledby="headingGames">
             <div class="card-body">
                 <app-projects-display [projects]=projects [type]="'game'"></app-projects-display>
             </div>
@@ -21,7 +21,7 @@
     <div class="card">
         <div class="card-header" id="headingCode">
             <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseCode" aria-expanded="true" aria-controls="collapseCode">
-                <h2 class="projectsHeading">Code Projects</h2>
+                <h2 class="projectsHeading">Web Development</h2>
             </button>
         </div>
         <div id="collapseCode" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingCode">
@@ -34,7 +34,7 @@
     <div class="card">
         <div class="card-header" id="headingOther">
             <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseOther" aria-expanded="true" aria-controls="collapseOther">
-                <h2 class="projectsHeading">Other Projects</h2>
+                <h2 class="projectsHeading">Other</h2>
             </button>
         </div>
         <div id="collapseOther" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingOther">
