Update now page

--- a/src/app/now/now.component.html
+++ b/src/app/now/now.component.html
@@ -9,9 +9,9 @@
 
 <p>Here's what I'm focused on these days:</p>
 <ul>
+  <li>Exploring job opportunities</li>
   <li><a href="https://valleyofshadowgame.com">Valley of Shadow</a> development</li>
-  <li>Playing as many tabletop RPGs as possible</li>
-  <li>Playing Games (Apex Legends, Divinity: Original Sin)</li>
+  <li><a href="https://github.com/NickJVaccaro/eq-gems">EQ Gems Webapp</a></li>
 </ul>
 
-<p class="small text-right">Last updated 2/25/19</p>
+<p class="small text-right">Last updated 4/8/19</p>
