Revamp about page content
The about page was previously just used to present general info of
myself, I have geared it more toward professional work now. I've also
added a photo of myself because I read online that you should do that.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,20 +1,55 @@
 <h1 class="text-center">About</h1>
 <hr/>
+<h2 class="text-center">Full Stack Developer</h2>
+<br/>
 
 <div class="row">
-  <div class="col">
-    <p>I'm a software developer and project manager.</p>
-    <p>I make games some of the time, and websites some of the time. In fact, I made this website.</p>
-    <p>You can see <em>all</em> of my projects <a routerLink="/projects">here</a>.</p>
-    <p>My brother Anthony and I have our own video game company. It's called Synersteel Studio, and you can visit it <a href="http://synersteel.com" target="_blank">here</a>.
-    We've commercially released 4 games to date.</p>
-    <p>I really enjoy:</p>
-    <ul>
-      <li>Productivity</li>
-      <li>Minimalism</li>
-      <li>Environmental puzzle games</li>
-      <li>Making structured lists out of items that should be comma separated</li>
-    </ul>
-    <p>I think that's about everything.</p>
+  <div class="col-lg-8 col-12">
+    <p>I have 7+ years of experience doing back-end, front-end, gamedev, tutorials, code reviews, bug reports, and production deployments. I'm focused on results, and do whatever I can to help the entire team succeed.</p>
+    <p>I am co-founder of an indie video game company called <a href="http://synersteel.com" target="_blank">Synersteel Studio</a>, and have commercially released 4 games across 3 platforms.</p>
+    <p>You can see some of my projects <a routerLink="/projects">here</a>.</p>
+    <p>My expertise lies in:</p>
+    <div class="row">
+      <div class="col-4 text-right">
+        <p><strong>Languages</strong></p>
+      </div>
+      <div class="col">
+        <p>C#, JavaScript, SQL, Java, CSS</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 text-right">
+        <p><strong>Frameworks</strong></p>
+      </div>
+      <div class="col">
+        <p>.NET/Core, NodeJS, Angular, React</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 text-right">
+        <p><strong>Code Tools</strong></p>
+      </div>
+      <div class="col">
+        <p>AWS, Git, MySQL, IIS, Docker</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 text-right">
+        <p><strong>Project Tools</strong></p>
+      </div>
+      <div class="col">
+        <p>Asana, Trello, Slack, MediaWiki</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4 col-12 text-center">
+    <div class="img-div">
+      <img src="assets/me512.jpg" class="img-me me-front figure-img rounded border">
+      <img src="assets/happy512.jpg" class="img-me me-back figure-img rounded border">
+    </div>
+    <div class="about-info">
+      <p><a href="mailto:njvaccaro0@gmail.com">njvaccaro0@gmail.com</a></p>
+      <p><a href="assets/NickVaccaroResume.pdf" target="_blank">View Resume</a></p>
+    </div>
   </div>
 </div>
