--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,15 +17,22 @@
   <br/>
   <router-outlet></router-outlet>
   <hr/>
-  <div class="row justify-content-center">
-    <div class="col text-right">
-        <a href="mailto:njvaccaro0@gmail.com" class="fas fa-envelope-square fa-clickable fa-3x"></a>
-    </div>
-    <div class="col text-center">
-        <a href="https://twitter.com/NickJVaccaro" class="fab fa-twitter-square fa-clickable fa-3x" target="_blank"></a>
-    </div>
-    <div class="col">
-        <a href="https://www.linkedin.com/in/nickjvaccaro/" class="fab fa-linkedin fa-clickable fa-3x" target="_blank"></a>
+  <div class="row justify-content-center link-footer">
+    <div>
+      <div class="row">
+        <div class="col">
+            <a href="mailto:njvaccaro0@gmail.com" class="fas fa-envelope-square fa-clickable fa-3x"></a>
+        </div>
+        <div class="col">
+            <a href="https://twitter.com/NickJVaccaro" class="fab fa-twitter-square fa-clickable fa-3x" target="_blank"></a>
+        </div>
+        <div class="col">
+            <a href="https://www.linkedin.com/in/nickjvaccaro/" class="fab fa-linkedin fa-clickable fa-3x" target="_blank"></a>
+        </div>
+        <div class="col">
+            <a href="https://github.com/NickJVaccaro" class="fab fa-github-square fa-clickable fa-3x" target="_blank"></a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
