Update projects order and content
I moved Web Dev projects to be on top, for added emphasis on them. I
got rid of a bunch of projects to showcase only the important ones.

--- a/src/app/projects-display/projects-display.component.html
+++ b/src/app/projects-display/projects-display.component.html
@@ -9,8 +9,8 @@
         </div>
         <div class="col-md">
             <a href="{{project.link}}" target="_blank"><h3>{{project.title}}</h3></a>
-            <p><strong>Summary:</strong><br/>{{project.summary}}</p>
-            <p><strong>Tech Used:</strong><br/>{{project.tech}}</p>
+            <p><strong>Summary:</strong> {{project.summary}}</p>
+            <p><strong>Tech Used:</strong> {{project.tech}}</p>
         </div>
       </div>
     </div>
