--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,25 +6,12 @@
 <div class="accordion" id="accordionProjects">
 
     <div class="card">
-        <div class="card-header" id="headingGames">
-            <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseGames" aria-expanded="true" aria-controls="collapseGames">
-                <h2 class="projectsHeading">Game Development</h2>
-            </button>
-        </div>
-        <div id="collapseGames" class="collapse show" data-parent="#accordionProjects" aria-labelledby="headingGames">
-            <div class="card-body">
-                <app-projects-display [projects]=projects [type]="'game'"></app-projects-display>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
         <div class="card-header" id="headingCode">
             <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseCode" aria-expanded="true" aria-controls="collapseCode">
                 <h2 class="projectsHeading">Web Development</h2>
             </button>
         </div>
-        <div id="collapseCode" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingCode">
+        <div id="collapseCode" class="collapse show" data-parent="#accordionProjects" aria-labelledby="headingCode">
             <div class="card-body">
                 <app-projects-display [projects]=projects [type]="'code'"></app-projects-display>
             </div>
@@ -32,9 +19,22 @@
     </div>
 
     <div class="card">
+        <div class="card-header" id="headingGames">
+            <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseGames" aria-expanded="true" aria-controls="collapseGames">
+                <h2 class="projectsHeading">Game Development</h2>
+            </button>
+        </div>
+        <div id="collapseGames" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingGames">
+            <div class="card-body">
+                <app-projects-display [projects]=projects [type]="'game'"></app-projects-display>
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
         <div class="card-header" id="headingOther">
             <button class="btn btn-card-header" type="button" data-toggle="collapse" data-target="#collapseOther" aria-expanded="true" aria-controls="collapseOther">
-                <h2 class="projectsHeading">Other</h2>
+                <h2 class="projectsHeading">Other (Non-Dev)</h2>
             </button>
         </div>
         <div id="collapseOther" class="collapse" data-parent="#accordionProjects" aria-labelledby="headingOther">
