Simplify photo animation
The animating photo was disproportionately complex for the amount of
cool that it introduced to the site. It has been changed to a simple
brightness animation.

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,64 +1,12 @@
-.img-div {
-    margin: 0 auto;
-    height: 350px;
-    width: 350px;
-}
-
 .img-me {
-    width: 350px;
-    height: 350px;
-    position: absolute;
-    top: 0;
-    left: 15px;
+    transition: filter 1s;
 }
 
-.me-front {
-    opacity: 1;
-    transition: opacity .75s;
-    z-index: 2;
-}
-
-/* Large */
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-    .img-div {
-        height: 300px;
-        width: 300px;
-    }
-
-    .img-me {
-        height: 300px;
-        width: 300px;
-    }
-}
-
-/* Medium */
-@media only screen and (max-width: 992px) {
-    .img-me {
-        left: 185px;
-    }
-}
-
-/* Small */
-@media only screen and (max-width: 768px) {
-    .img-me {
-        left: 95px;
-    }
-}
-
-/* Extra Small */
-@media only screen and (max-width: 576px) {
-    .img-me {
-        left: 65px;
-    }
-}
-
-.me-back {
-    z-index: 1;
-}
-
-.me-front:hover,
-.me-front:active {
-    opacity: 0;
+.img-me:hover,
+.img-me:active {
+    filter: brightness(150%);
+    transition: filter 0.75s;
+    
 }
 
 .about-info {
@@ -66,7 +14,6 @@
 }
 
 .about-info > p {
-    /*font-size: 1.1em;*/
     line-height: 0.75;
 }
 
