--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -43,13 +43,10 @@
     </div>
   </div>
   <div class="col-lg-4 col-12 text-center">
-    <div class="img-div">
-      <img src="assets/me512.jpg" class="img-me me-front figure-img rounded border">
-      <img src="assets/happy512.jpg" class="img-me me-back figure-img rounded border">
-    </div>
-    <div class="about-info">
-      <p><a href="mailto:njvaccaro0@gmail.com">njvaccaro0@gmail.com</a></p>
-      <p><a href="assets/NickVaccaroResume.pdf" target="_blank">View Resume</a></p>
-    </div>
+      <img src="assets/me512.jpg" class="figure-img img-fluid rounded border img-me">
+      <div class="about-info">
+        <p><a href="mailto:njvaccaro0@gmail.com">njvaccaro0@gmail.com</a></p>
+        <p><a href="assets/NickVaccaroResume.pdf" target="_blank">View Resume</a></p>
+      </div>
   </div>
 </div>
